--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.3
+Flask==2.3.2
 requests==2.31.0
-Pillow==9.4.0
-flask-cors==3.0.10
-python-dotenv==0.21.0
+python-dotenv==1.0.0
+Flask-Cors==3.1.0
+Pillow==9.5.0
